fix for visible scrollbars on the .next-links in firefox
git-svn-id: https://krema.svn.beanstalkapp.com/hastuzeit@141 3445ca58-e459-48c6-80b6-aacbbe7ab71b

--- a/wphastuzeit/trunk/style/css/layout.css
+++ b/wphastuzeit/trunk/style/css/layout.css
@@ -374,6 +374,7 @@ div {
 	overflow: auto;
 	border-top: 4px double #ff6600;
 	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .wp-pagenavi {
